WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139005
AX: [ATK] Table captions and table rows are missing from the accessible hierarchy
https://bugs.webkit.org/show_bug.cgi?id=139005
Summary
AX: [ATK] Table captions and table rows are missing from the accessible hiera...
Joanmarie Diggs
Reported
2014-11-22 14:45:02 PST
Given: <table> <caption>My caption</caption> <tr><td>1</td><td>2</td></tr> <tr><td>3</td><td>4</td></tr> </table> Expected results: An accessible object with ATK_ROLE_CAPTION would appear as a descendant of the accessible table. Actual results: There is no accessible object with ATK_ROLE_CAPTION (or any other role) appearing as a descendant of the accessible table.
Attachments
Patch
(62.58 KB, patch)
2014-11-26 06:25 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Patch
(62.51 KB, patch)
2014-12-02 14:39 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-11-22 14:45:17 PST
<
rdar://problem/19068639
>
Joanmarie Diggs
Comment 2
2014-11-23 11:56:25 PST
Expanding the summary to include rows. Unlike captions, which were always expected for exposure on ATK, rows were deliberately not exposed. But more and more table rows are showing up in other ATK implementations, so we might as well start exposing them. And if we're going to rework ATK table exposure, might as well do it all at once.
Joanmarie Diggs
Comment 3
2014-11-26 06:25:58 PST
Created
attachment 242225
[details]
Patch
Joanmarie Diggs
Comment 4
2014-11-26 08:11:26 PST
Comment on
attachment 242225
[details]
Patch Chris and/or Mario: If either of you have time to review this, it would be awesome. (At the moment, the gtk-wk2 bot is hosed, but that's independent of this patch.)
chris fleizach
Comment 5
2014-11-27 17:09:53 PST
Comment on
attachment 242225
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242225&action=review
> Source/WebCore/accessibility/AccessibilityTable.cpp:365 > + Node* tableElement = m_renderer->node();
There might be a tableElement() method on AXTable. If not we should probably add one
> Source/WebCore/accessibility/atk/WebKitAccessibleWrapperAtk.cpp:352 > + if (static_cast<unsigned>(index) >= children.size())
Size() returns a size_t so you might want to cast to that
Joanmarie Diggs
Comment 6
2014-12-02 14:39:15 PST
Created
attachment 242450
[details]
Patch
Joanmarie Diggs
Comment 7
2014-12-02 17:12:43 PST
Comment on
attachment 242450
[details]
Patch (In reply to
comment #5
)
> Comment on
attachment 242225
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=242225&action=review
> > > Source/WebCore/accessibility/AccessibilityTable.cpp:365 > > + Node* tableElement = m_renderer->node(); > > There might be a tableElement() method on AXTable. If not we should probably > add one
There is one already. Change made.
> > Source/WebCore/accessibility/atk/WebKitAccessibleWrapperAtk.cpp:352 > > + if (static_cast<unsigned>(index) >= children.size()) > > Size() returns a size_t so you might want to cast to that
Change made. Thanks!
WebKit Commit Bot
Comment 8
2014-12-02 18:02:23 PST
Comment on
attachment 242450
[details]
Patch Clearing flags on attachment: 242450 Committed
r176706
: <
http://trac.webkit.org/changeset/176706
>
WebKit Commit Bot
Comment 9
2014-12-02 18:02:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug